objects/JobPositionShift.object
<CustomObject>
    <fields>
        <fullName>Default_Duration__c</fullName>
        <formula>ROUND((EndTime - StartTime)/3600000,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDO_Golden_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This record is used to indicate golden records in the IDO. Check the IDO Record Description Field for more information.</description>
        <inlineHelpText>This record is used to indicate golden records in the IDO. Check the IDO Record Description Field for more information.</inlineHelpText>
        <label>IDO Golden Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IDO_Record_Description__c</fullName>
        <description>This field is used to provide a description on what types of demo this record can be used for. Intention is for this to be used by IDO agent.</description>
        <inlineHelpText>This field is used to provide a description on what types of demo this record can be used for. Intention is for this to be used by IDO agent.</inlineHelpText>
        <label>IDO Record Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_and_End_DateTime__c</fullName>
        <formula>CASE(
    MONTH(StartDate),
    1, &quot;Jan&quot;,
    2, &quot;Feb&quot;,
    3, &quot;Mar&quot;,
    4, &quot;Apr&quot;,
    5, &quot;May&quot;,
    6, &quot;Jun&quot;,
    7, &quot;Jul&quot;,
    8, &quot;Aug&quot;,
    9, &quot;Sep&quot;,
    10, &quot;Oct&quot;,
    11, &quot;Nov&quot;,
    12, &quot;Dec&quot;,
    &quot;&quot;
) &amp; &quot; &quot; &amp; 
TEXT(DAY(StartDate)) &amp; &quot;, &quot; &amp; 
TEXT(IF(HOUR(StartTime)&lt;12,
IF(
Value(Left(TEXT(StartTime),2))=0, 
12,
Hour(StartTime)),
IF(HOUR(StartTime)=12,
12,
HOUR(StartTime)-12
)))
&amp;&quot;:&quot;&amp;
MID(TEXT(StartTime),4,2)&amp;
IF(Hour(EndTime) &gt;= 12, &quot; AM&quot;,&quot; PM&quot;)
&amp; &quot; to &quot;&amp;
CASE(
    MONTH(EndDate),
    1, &quot;Jan&quot;,
    2, &quot;Feb&quot;,
    3, &quot;Mar&quot;,
    4, &quot;Apr&quot;,
    5, &quot;May&quot;,
    6, &quot;Jun&quot;,
    7, &quot;Jul&quot;,
    8, &quot;Aug&quot;,
    9, &quot;Sep&quot;,
    10, &quot;Oct&quot;,
    11, &quot;Nov&quot;,
    12, &quot;Dec&quot;,
    &quot;&quot;
) &amp; &quot; &quot; &amp; 
TEXT(DAY(EndDate)) &amp; &quot;, &quot; &amp; 
TEXT(IF(HOUR(EndTime)&lt;12,
IF(
Value(Left(TEXT(EndTime),2))=0, 
12,
Hour(EndTime)),
IF(HOUR(EndTime)=12,
12,
HOUR(EndTime)-12
)))
&amp;&quot;:&quot;&amp;
MID(TEXT(StartTime),4,2)&amp;
IF(Hour(EndTime) &gt;= 12, &quot; AM&quot;,&quot; PM&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start and End Date/Time</label>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>